# financial-data-analysis

./: .dockerignore  .env.docker  .gitignore  AGENT_GUIDE.md  BOARD_PACK_ANALYST.md  CI_CD_GUIDE.md  CLAUDE.md  CLEANUP_GUIDE.md  DEVELOPER_GUIDE.md  Dockerfile  HANDOFF.md  NEXT_STEPS.md  NOTES_challenges_and_ambition_gap.md  README.md  STATUS_AND_PRIORITIES.md  STATUS_board_pack_pipeline_plan.md  TODO_company_identity.md  TODO_infra.md  docker-compose.yml  error-fixes-branch-diff.md  makefile  nFamily_case_study.md  pyproject.toml  pytest.ini  railway.json  requirements-simple.txt  requirements.txt  terminal_commands.txt  vercel.json
.github/workflows/: ci-cd.yml  ci.yml
ci/: 000_drop_tables.sh  002_migrate.sh  002_test_database_url.sh  003_smoke_test.sh  00_config_validation.sh  00_migration_check.sh  01_drop_tables.sh  01_validate_and_generate.sh  02_drop_tables.sh  02_reset_db.sh  03_apply_schema.sh  03_smoke_csv.sh  04_integration_xlsx.sh  04_quick_diagnostic.sh  04_seed_database.sh  04_smoke_csv.sh  05_full_sample.sh  05_test_components.sh  06_metric_validation.sh  06_test_container.sh  07_full_sample.sh  07_test_ingestion_layers.sh  08_comprehensive_check  08_smoke_csv.sh  10_metric_validation.sh  12_comprehensive_check.sh  migrate.sh  reset_local_db.sh  smoke_test.sh
client/: .env.production  package-lock.json  package.json  tailwind.config.js  vercel.json
client/public/: index.html
client/src/: App.css  App.jsx  App.tsx  FileUpload.jsx  index.css  index.js
config/: board_pack.yaml  company_overrides.yaml  contracts.yaml  fields.yaml  observations.yaml  periods.yaml  questions.yaml  tables.yaml  taxonomy.yaml
data/: 1756314176680_1756311657262_financial_data_template.csv  1756460138916_sample_data.csv  smoke.csv
database/: README.md  SEED_README.md  migrate.py  seed.py
database/migrations/: 000_create_migrations_table.sql  001_create_core_tables.sql  002_seed_initial_data.sql  003_create_financial_metrics_tables.sql  003a_create_and_seed_periods.sql  004_create_questions_and_reports_tables.sql  005_add_user_preferences_table.sql  006_add_documents_raw_facts_and_findings.sql  007_add_context_key.sql  008_create_financial_metrics_best_view.sql  009_add_fact_rejections.sql  010_add_companies_house_number.sql  011_update_financial_metrics_best_view.sql  012_add_period_scope.sql  (+2 more)
schema/: 001_financial_schema.sql  002_question_templates.sql  financial_schema.sql  question_templates.sql
scripts/: calc_metrics.py  ci_manager.py  cleanup_transient_data.py  deploy-start.sh  docker-build.sh  generate_periods_sql.py  generate_periods_yaml2.py  generate_questions.py  generate_schema.py  health-check.sh  ingest_dir.py  ingest_pdf.py  ingest_xlsx.py  manage.py  manage_aliases.py  questions_engine.py  report_generator.py  utils.py  validate_yaml.py
server/: Dockerfile  index.js  main.py  main_old.py  package-lock.json  package.json  railpack-plan.json  railway.json  railway.toml  server.js  test.xlsx  test_blob.js
server/api/: index.js  (+4 more)
tests/: __init__.py  conftest.py
(+88 files in other folders)
